--- a/index.html
+++ b/index.html
@@ -1,13 +1,296 @@
+<!-------------------------------------------------------------------
+Course: SDEV 255
+Date: 20 Sept 2022
+Final Project
+File: index.html
+Group: 3 - Nikola Petreski and Nativida Barlow
+Frontend Student: Nativida Barlow
+Backend Student: Nikola Petreski
+Instructor: Professor Troy Hamby
+IVY Tech Community College
+------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <button>execute</button>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link data-rh="true" rel="shortcut icon" type="image" href="images/clueTitlePic.jpg" sizes="70x70"><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <title>School of Clue:: Home</title>
+</head>
+<!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+<body>
+  <!--NavBar-->
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+    <div class="container">
+      <a href="#" class="navbar-brand"><b>School of CL<span class="standout2">U</span>E</b> - <small>(Final Project)<br/>
+      <p class="white-text-with-blue-shadow">
+        Project Lead - Fullstack Developer: Nikola Petreski<br/>
+      UI/Design - Frontend Developer: Nativida Barlow
+      </p>
+    </small></a>
+
+      <button class="navbar-toggler type=botton" data-bs-toggle="collapse" data-bs-target="#navmenu">
+
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+      <div class="collapse navbar-collapse" id="navmenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="logIn.html" class="nav-link">Log In</a>
+          </li>
+          <li class="nav-item">
+            <a href="courses.html" class="nav-link">Courses</a>
+          </li>
+          <li class="nav-item">
+            <a href="instructors.html" class="nav-link">Instructors</a>
+          </li>
+          <li class="nav-item">
+            <a href="scheduleBuilder.html" class="nav-link">Schedule Builder</a>
+          </li>
+          <li class="nav-item">
+            <a href="cart.html" class="nav-link">Cart</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+  <!--Showcase-->
+  <section class="bg-dark text-light p-5 p-lg-0 text-center text-sm-start">
+    <div class="container">
+      <div class="d-sm-flex align-items-center justify-content-between">
+        <div>
+          <h1>School of CL<span class="standout2">U</span>E<br/> <span class="text-warning">
+              Home
+            </span><img src="images/clueGame.jpg" alt="School of Clue" width="200" height="190" align="right" padding-top="15em"/>
+            </h1>
+            <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+          <p class="lead my-4 white-text-with-red-shadow">
+            Welcome to the School of Clue!  We are so happy that you are choosing the School of Clue to start your educational journey.  Our instructors have been waiting for you.  It is time for the adventure to begin!  I hope you brought your magnifying glass, because if you are here to be a coder, you will be doing a lot of detective work!  Well, what are you waiting for?  Come on in.  Let's get to work!
+          </p>
+          <a href="scheduleBuilder.html"><button class="btn btn-dark btn-lg bg-primary text-light" data-bs-toggle data-bs-target="">Enroll Today!
+          </button></a>
+        </div>
+        <section>
+      </div>
+    </div>
+  </section>
+  <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+  <h1><center>Welcome to the School of Clue!</center></h1>
+  <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+  <section style="background-color: black;">
+  <center><iframe width="560" height="315" src="https://www.youtube.com/embed/_l5XYsU8Ih0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+  </section>
+  <!--Boxes-->
+  <section class="bg-secondary p-5">
+    <div class="container">
+      <div class="row text-center g-4">
+        <div class="col-md">
+          <div class="col-md">
+            <div class="card bg-dark text-light">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-people"></i>
+                </div>
+                <h3 class="card-title mb-3">
+                  In Person
+                </h3>
+                <p class="cart-text">
+                  Traditional in-person classes are available on a campus near you.
+                </p>
+                <a href="courses.html" class="btn btn-danger">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="col-md">
+            <div class="card bg-light text-dark">
+              <div class="card-body text-center">
+                <div class="h1 mb-3">
+                  <i class="bi bi-person-square"></i>
+                </div>
+                <h3 class="card-title mb-3">
+                  Hybrid
+                </h3>
+                <p class="cart-text">
+                  Hybrid classes are available for those that can't be campus all the time.
+                </p>
+                <a href="courses.html" class="btn btn-danger">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+        <div class="col-md">
+          <div class="card bg-dark text-light">
+            <div class="card-body text-center">
+              <div class="h1 mb-3">
+                <i class="bi bi-laptop"></i>
+              </div>
+              <h3 class="card-title mb-3">
+                Virtual
+              </h3><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+              <p class="cart-text">
+                For those that prefer a full virtual experience, School of Clue offers 100% online classes.
+              </p><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+              <a href="courses.html" class="btn btn-danger">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+  </section>
+  <!--Question Accordion-->
+  <div id="questions" class="p5">
+    <div class="accordion accordion-flush" id="questions">
+        <!--Item 1-->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">
+              How long is each semester?
+            </button>
+          </h2><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+          <div id="question-one" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#questions
+s">
+            <div class="accordion-body">Each semester is 16 weeks long.  Sprig and Fall.  Summer courses are 4-8 weeks long.</div>
+          </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+        </div>
+        <!--Item 2-->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">
+              How much does it cost to attend?
+            </button>
+          </h2>
+          <div id="question-two" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Tuition is $20.00 per credit hour.  The cost of attendance is dependant on the number credit hours taken per semester.  Technology fees and other fees apply.  Contact Admissions for more info.  Financial aid is available for those who qualify.</div>
+          </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+        </div>
+        <!--Item 3-->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">
+              What do I need to know?
+            </button>
+          </h2><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+          <div id="question-three" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum a sunt, enim, rem facere culpa nam qui expedita ipsum dolore atque cumque perspiciatis facilis laboriosam. Aperiam accusantium eos in delectus consectetur doloribus excepturi distinctio maxime dolorum nostrum optio tenetur odit molestias, nobis quaerat ipsa voluptate consequatur facere sapiente harum praesentium!</div>
+          </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+        </div>
+      <!--Item 4-->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-four">
+            How do I sign up?
+          </button>
+        </h2>
+        <div id="question-four" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">Signing up is easy!  To apply, click <a href="admissions.html"><span class="standout6"><b>ADMISSIONS</b></span></a>.  Create an account and start building your classes.  Enrollment is quick and easy!  Apply today!</div>
+        </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+      </div>
+    <!--Item 5-->
+    <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">
+            Will you help me find a job?
+          </button>
+        </h2><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+        <div id="question-five" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">After graduation, our Career Center will work with you to make a resume, apply for jobs.  It's possible to be placed as an intern or direct hire with companies that reach out to IVY Tech to find great talent.</div>
+        </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+      </div>
+    </div>
+  </div>
+  <!--Newsletter-->
+  <section class="bg-secondary text-light p-5">
+    <div class="container">
+      <div class="d-md-flex justify-content-between align-items-center">
+        <h3 class="mb-3 mb-md-0">Sign Up for Weekly Updates</h3>
+
+        <div class="input-group news-input">
+          <input type="text" class="form-control" placeholder="Enter Email" aria-label="Recipient's username"
+            aria-describedby="button-addon2" />
+
+          <button class="btn btn-dark btn lg" type="button">Submit
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!--Contact & Map-->
+  <section class="p-5">
+    <div class="container">
+        <div class="row g-4">
+            <div class="col-md"><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+                <h2 class="text-center mb-4">Contact Info</h2>
+                <ul class="list-group list-group-flush lead">
+                    <li class="list-group-item">
+                        <span class="fw-bold">Main Location:</span> 1111 Mansion Place, Beverly Hills, California  90210
+                    </li>
+                    <li class="list-group-item">
+                        <span class="fw-bold">Enrollment Phone:</span> (555) 555-5555
+                    </li>
+                    <li class="list-group-item">
+                        <span class="fw-bold">Student Phone:</span> (123) 456-7890
+                    </li><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+                    <li class="list-group-item">
+                        <span class="fw-bold">Enrollment Email:</span> sdev255group3@ivytech.edu
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+  </section>
+  <!--Footer-->
+  <footer class="p-5 bg-dark text-white text-center
+  position-relative">
+    <div class="container">
+        <p class="lead">Copyright &copy; 2022 - School of Clue (Final Project)</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+            <i class="bi bi-arrow-up-circle h1"></i>
+        </a>
+    </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+  </footer>
+
+  <!-- Modal -->
+<div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="enrollLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="enrollLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p class="lead">Fill out this form and we will get back to you.</p>
+        <form><div class="mb-3">
+            <label for="first-name" class="col-form-label">
+                First Name:
+                <input type="text" class="form-control" id="first-name">
+                </label>
+        </div></form>
+        </div><!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/emmet/2.3.6/emmet.cjs.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
