--- a/cart.html
+++ b/cart.html
@@ -77,6 +77,8 @@ IVY Tech Community College
           <p class="lead my-4 white-text-with-red-shadow">
             Let's make sure you signed up for all of your classes.  Please review your cart.  If edits are needed, please make adustments and click "CONTINUE" to finalize your schedule.<br/><br/><br/>
           </p>
+          <button class="btn btn-dark btn-lg bg-primary text-light"><a href="courses.html" style="text-decoration:none;">Courses</a>
+          </button>
         </div>
         <section>
 
