--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ IVY Tech Community College
   <h1><center>Welcome to the School of Clue!</center></h1>
   <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
   <section style="background-color: black;">
-  <center><iframe width="560" height="315" src="https://www.youtube.com/embed/_l5XYsU8Ih0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <br/>
+    <center><iframe style="border: 5px solid black;" src="https://www.youtube.com/embed/_l5XYsU8Ih0" alt="Clue (main theme)" width="" height="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center><br/>
   </section>
   <!--Boxes-->
   <section class="bg-secondary p-5">
