--- a/logIn.html
+++ b/logIn.html
@@ -89,7 +89,8 @@ IVY Tech Community College
   <h1><center>Log-In</center></h1>
   <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
   <section style="background-color: black;">
-  <center><iframe width="560" height="315" src="https://www.youtube.com/embed/jHG2bMe9YxY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+    <br/>
+    <center><iframe style="border: 5px solid black;" src="https://www.youtube.com/embed/jHG2bMe9YxY" alt="Clue (main theme)" width="" height="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center><br/>
   </section>
 <br/>
 <h1 style= "background-color: yellow; color: red;"><center>UNDER CONSTRUCTION</center></h1>
