--- a/scheduleBuilder.html
+++ b/scheduleBuilder.html
@@ -45,9 +45,6 @@ IVY Tech Community College
             <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="logIn.html" class="nav-link">Log In</a>
-          </li>
-          <li class="nav-item">
             <a href="courses.html" class="nav-link">Courses</a>
           </li>
           <li class="nav-item">
@@ -58,6 +55,9 @@ IVY Tech Community College
           </li>
           <li class="nav-item">
             <a href="cart.html" class="nav-link">Cart</a>
+          </li>
+          <li class="nav-item">
+            <a href="logIn.html" class="nav-link">Log In</a>
           </li>
         </ul>
       </div>
@@ -90,6 +90,101 @@ IVY Tech Community College
 <br/>
 <h1 style= "background-color: yellow; color: red;"><center>UNDER CONSTRUCTION</center></h1>
 <br/><br/><br/>
+<!--The following piece of code is designed to input an external image via a hyper reference link.-->
+<div id="floatleft"><img src="images/mathIcon.jpg" alt="Math Icon" float: height="200" width="190" align="right">
+</div>
+<p>
+  <b>Math - MATH 123<b/>
+  <br/>
+  <br/>
+  <input type="radio" name="mathType" value="inPerson"/> In-Person
+  <br/>
+  <br/>
+  <input type="radio" name="mathType" value="hybrid"/> Hybrid
+  <br/>
+  <br/>
+  <input type="radio" name="mathType" value="virtual"/> Virtual
+</p>
+<button><center><a href="___">Add to cart</a></center></button>
+<br/>
+<br/>
+<br/>
+
+<div id="floatleft"><img src="images/englishIcon.jpg" alt="English Icon" float: height="200" width="190" align="right">
+</div>
+
+<div style="background-color: grey;">
+<p>
+  <b>English - ENG 111<b/>
+  <br/>
+  <br/>
+  <input type="radio" name="englishType" value="inPerson"/> In-Person
+  <br/>
+  <br/>
+  <input type="radio" name="englishType" value="hybrid"/> Hybrid
+  <br/>
+  <br/>
+  <input type="radio" name="englishType" value="virtual"/> Virtual
+</p>
+<button><center><a href="___">Add to cart</a></center></button>
+<br/>
+<br/>
+<br/>
+</div>
+
+<div id="floatleft"><img src="images/webDevelopmentIcon.jpg" alt="Web Development Icon." float: height="200" width="190" align="right">
+</div>
+
+<form method="POST" action="___">
+
+  <div id="floatleft"><img src="images/scienceIcon.jpg" alt="Science Icon" float: height="200" width="190" align="right">
+  </div>
+
+<div style="background-color: grey;">
+  <p>
+    <b>Science - SCI 101<b/>
+    <br/>
+    <br/>
+    <input type="radio" name="scienceType" value="inPerson"/> In-Person
+    <br/>
+    <br/>
+    <input type="radio" name="scienceType" value="hybrid"/> Hybrid
+    <br/>
+    <br/>
+    <input type="radio" name="scienceType" value="virtual"/> Virtual
+  </p>
+  <br/>
+  <button><center><a href="___">Add to cart</a></center></button>
+  <br/>
+  <br/>
+  <br/>
+  </div>
+<p>
+  <b>Web App Development - SDEV 255<b/>
+  <br/>
+  <br/>
+  <input type="radio" name="webType" value="inPerson"/> In-Person
+  <br/>
+  <br/>
+  <input type="radio" name="webType" value="hybrid"/> Hybrid
+  <br/>
+  <br/>
+  <input type="radio" name="webType" value="virtual"/> Virtual
+</p>
+<button><center><a href="___">Add to cart</a></center></button>
+<br/>
+<br/>
+<br/>
+<center>
+<p>
+  <input class="buttons" type="submit" value="Order"/>
+  <input class="buttons" type="reset" value="Reset Form"/>
+</p>
+</center>
+
+</form>
+<!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
+
   <!--Contact & Map-->
   <section class="p-5">
     <div class="container">
