--- a/confirmation.html
+++ b/confirmation.html
@@ -2,7 +2,7 @@
 Course: SDEV 255
 Date: 20 Sept 2022
 Final Project
-File: index.html
+File: confirmation.html
 Group: 3 - Nikola Petreski and Nativida Barlow
 Frontend Student: Nativida Barlow
 Backend Student: Nikola Petreski
@@ -20,7 +20,7 @@ IVY Tech Community College
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <title>School of Clue:: Admissions</title>
+  <title>School of Clue:: Confirmation</title>
 </head>
 <!--Barlow/Petreski-Group3-Fall2022-IVY Tech-->
 <body>
